Fix text align in header to correspond mockup

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
   color: white;
   background-color: #33bebe;
   text-transform: uppercase;
+  line-height: 140px;
+  padding-left: 20px;
   margin-bottom: 50px;
 }
 
